--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb://localhost:27017/Football-match-tracker
+MONGO_URI = mongodb+srv://admin:admin@clustertest.yxvr2jx.mongodb.net/football_tracker?retryWrites=true&w=majority&appName=ClusterTest
 PORT = 5000
 JWT_SECRET=3f2j!Zg@9lP#mA^4&cB%QsT6xY8*
